--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,4 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+
+@mixin size($w, $h) {
+  width: $w;
+  height: $h;
+}
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Fjalla One', sans-serif;
+}
+
+.header {
+  padding: 30px 40px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: solid 2px #bbb;
+
+  .logo {
+    height: 30px;
+  }
+
+  #companyName {
+    font-size: 30px;
+    margin-left: 5px;
+    font-weight: 700;
+  }
+
+  .searchIcon {
+    position: absolute;
+    right: 120px;
+    color: rgba(187, 187, 187, .85)
+  }
+
+  .memberIcon {
+    position: absolute;
+    right: 40px;
+    @include size(40px, 40px);
+    background-color: brown;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .memberAlpha {
+      font-size: 25px;
+      color: rgba(238, 238, 238, .7);
+    }
+  }
+}
+
+.filter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 40px;
+
+  .tag {
+    white-space: nowrap;
+    margin: 15px 5px 20px 10px;
+    padding: 10px 20px;
+    background-color: rgba(221, 221, 221, .4);
+    border-radius: 20px;
+    font-weight: 500;
+  }
+
+  .all {
+      background-color: #666;
+      color: #eee;
+    }
 }
