--- a/assets/style.scss
+++ b/assets/style.scss
@@ -19,6 +19,10 @@
   flex-direction: row;
   align-items: center;
   border-bottom: solid 2px #bbb;
+  position: fixed;
+  width: 100vw;
+  z-index: 2;
+  background-color: #fff;
 
   .logo {
     height: 30px;
@@ -57,7 +61,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0 40px;
+  padding: 60px 40px 0;
+  position: relative;
+  z-index: 1;
 
   .tag {
     white-space: nowrap;
@@ -72,4 +78,85 @@
       background-color: #666;
       color: #eee;
     }
+}
+
+.content {
+  padding: 0 50px;
+  display: flex;
+  flex-flow: row wrap;
+  position: relative;
+  z-index: 1;
+
+  .video {
+    margin: 0 20px 30px 10px;
+    width: 420px;
+
+    .videoPic {
+      width: 420px;
+    }
+
+    .info {
+      display: flex;
+      position: relative;
+      margin-top: 7px;
+      
+
+      .channelLogo {
+        @include size(60px, 60px);
+        margin-right: 15px;
+      }
+
+      .infoText {
+        word-wrap:break-word;
+
+        .videoTitle {
+          width: 315px;
+          font-weight: 800;
+          font-size: 18px;
+          word-spacing: 2px;
+          margin: 2px 0 5px;
+        }
+
+        .infoDetail {
+          width: 315px;
+          font-size: 15px;
+          color: rgba(102, 102, 102, .8)
+        }
+      }
+
+      .ellipsisIcon {
+        position: absolute;
+        color: rgba(102, 102, 102, .8);
+        top: 10px;
+        right: 10px;
+      }
+    }
+  }
+}
+
+.toolbar {
+  display: flex;
+  justify-content: space-around;
+  position: fixed;
+  width: 100vw;
+  z-index: 2;
+  background-color: #fff;
+  bottom: 0;
+  padding: 15px 0 10px;
+
+  .tool {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .toolText {
+      margin-top: 5px;
+      font-weight: 700;
+    }
+
+    .other {
+      color: rgba(102, 102, 102, .5);
+    }
+  }
 }
